# InterconnectIO_Slave

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
documentation/doxygen/html/: annotated.html  annotated_dup.js  classes.html  dir_000000_000001.html  dir_000001_000002.html  dir_53eeb34cf47e587e4bb1e3db106b9aae.html  dir_53eeb34cf47e587e4bb1e3db106b9aae.js  dir_d9edf6c004b4a7ff14fe9ae7a92214ee.html  dir_d9edf6c004b4a7ff14fe9ae7a92214ee.js  dir_d9edf6c004b4a7ff14fe9ae7a92214ee_dep.map  dir_d9edf6c004b4a7ff14fe9ae7a92214ee_dep.md5  dir_db59896144483970e256bd8c7063d535.html  dir_db59896144483970e256bd8c7063d535.js  dir_db59896144483970e256bd8c7063d535_dep.map  dir_db59896144483970e256bd8c7063d535_dep.md5  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  globals_vars.html  graph_legend.html  i2c__fifo_8h.html  i2c__fifo_8h__dep__incl.map  i2c__fifo_8h__dep__incl.md5  i2c__fifo_8h__incl.map  i2c__fifo_8h__incl.md5  i2c__fifo_8h_source.html  i2c__slave_8h.html  i2c__slave_8h.js  i2c__slave_8h__dep__incl.map  i2c__slave_8h__dep__incl.md5  i2c__slave_8h__incl.map  i2c__slave_8h__incl.md5  i2c__slave_8h_source.html  index.html  (+14 more)
documentation/doxygen/latex/: annotated.tex  files.tex  i2c__fifo_8h.tex  i2c__fifo_8h__dep__incl.md5  i2c__fifo_8h__incl.md5  i2c__slave_8h.tex  i2c__slave_8h__dep__incl.md5  i2c__slave_8h__incl.md5  md_README.tex  refman.tex  (+4 more)
firmware/: CMakeLists.txt  slave.c  userconfig.h.in
firmware/i2c_slave/: CMakeLists.txt  i2c_slave.c
(+38 files in other folders)
